--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "GPL v2",
   "dependencies": {
+    "avalanche_component_listing": "^2.0.0",
     "avalanche_object_media": "^2.0.0"
   }
 }
